parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    DIF
    RETURN
    CASE
    BREAK
    TO
    REPEAT
    FOR
    LLAVED
    LLAVEI
    UNTIL
    FUNTION
    DOWNTO

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PCOMA USES ID PCOMA contenido
Rule 2     contenido -> declaracion_variables declaraciones
Rule 3     declaracion_variables -> vacio
Rule 4     declaracion_variables -> declaracion_variable
Rule 5     declaracion_variable -> VAR dec DPUN type PCOMA
Rule 6     declaracion_variable -> VAR dec DPUN type PCOMA declaracion_variable
Rule 7     dec -> ID
Rule 8     dec -> ID COMA dec
Rule 9     type -> type_simple
Rule 10    type -> type_array
Rule 11    type_array -> ARRAY CORI rango CORD OF type_simple
Rule 12    rango -> CNUM PUNTO PUNTO CNUM
Rule 13    type_simple -> INT
Rule 14    type_simple -> STR
Rule 15    type_simple -> BOOL
Rule 16    type_simple -> FLOAT
Rule 17    type_simple -> CHAR
Rule 18    declaraciones -> declaraciones_compuesta
Rule 19    declaraciones_compuesta -> BEGIN decla END
Rule 20    decla -> declaracion
Rule 21    decla -> decla declaracion
Rule 22    declaracion -> declaracion_simple
Rule 23    declaracion -> declaracion_estructurada
Rule 24    declaracion_simple -> asignacion
Rule 25    declaracion_simple -> lectura
Rule 26    declaracion_simple -> escritura
Rule 27    declaracion_estructurada -> declaraciones_compuesta
Rule 28    declaracion_estructurada -> declaracion_if
Rule 29    declaracion_estructurada -> declaracion_while
Rule 30    declaracion_if -> IF exprecion THEN declaracion
Rule 31    declaracion_if -> IF exprecion THEN declaracion ELSE declaracion
Rule 32    declaracion_while -> WHILE exprecion DO declaracion
Rule 33    asignacion -> ID ASIG exprecion PCOMA
Rule 34    lectura -> READ PARI ID PARD PCOMA
Rule 35    lectura -> READLN PARI ID PARD PCOMA
Rule 36    escritura -> WRITE PARI exp PARD PCOMA
Rule 37    escritura -> WRITELN PARI exp PARD PCOMA
Rule 38    exp -> exprecion
Rule 39    exp -> exprecion COMA exp
Rule 40    exprecion -> exprecion_simple
Rule 41    exprecion -> exprecion_simple operador_relacional exprecion
Rule 42    exprecion_simple -> signo termino
Rule 43    exprecion_simple -> signo termino adicion exprecion_simple
Rule 44    signo -> vacio
Rule 45    signo -> MAS
Rule 46    signo -> MENOS
Rule 47    termino -> factor
Rule 48    termino -> factor multipicacion termino
Rule 49    factor -> CNUM
Rule 50    factor -> STRING
Rule 51    factor -> ID
Rule 52    factor -> NUM
Rule 53    factor -> PARI exprecion PARD
Rule 54    factor -> NOT factor
Rule 55    adicion -> MAS
Rule 56    adicion -> MENOS
Rule 57    adicion -> OR
Rule 58    multipicacion -> POR
Rule 59    multipicacion -> DIV
Rule 60    multipicacion -> AND
Rule 61    operador_relacional -> EQ
Rule 62    operador_relacional -> LT
Rule 63    operador_relacional -> GT
Rule 64    operador_relacional -> GE
Rule 65    operador_relacional -> LE
Rule 66    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 60
ARRAY                : 11
ASIG                 : 33
BEGIN                : 19
BOOL                 : 15
BREAK                : 
CASE                 : 
CHAR                 : 17
CNUM                 : 12 12 49
COMA                 : 8 39
CONST                : 
CORD                 : 11
CORI                 : 11
DIF                  : 
DIV                  : 59
DO                   : 32
DOWNTO               : 
DPUN                 : 5 6
ELSE                 : 31
END                  : 19
EQ                   : 61
FLOAT                : 16
FOR                  : 
FUNTION              : 
GE                   : 64
GT                   : 63
ID                   : 1 1 7 8 33 34 35 51
IF                   : 30 31
INT                  : 13
LE                   : 65
LLAVED               : 
LLAVEI               : 
LT                   : 62
MAS                  : 45 55
MENOS                : 46 56
NOT                  : 54
NUM                  : 52
OF                   : 11
OR                   : 57
PARD                 : 34 35 36 37 53
PARI                 : 34 35 36 37 53
PCOMA                : 1 1 5 6 33 34 35 36 37
POR                  : 58
PROGRAM              : 1
PUNTO                : 12 12
READ                 : 34
READLN               : 35
REPEAT               : 
RETURN               : 
STR                  : 14
STRING               : 50
THEN                 : 30 31
TO                   : 
UNTIL                : 
USES                 : 1
VAR                  : 5 6
WHILE                : 32
WRITE                : 36
WRITELN              : 37
error                : 

Nonterminals, with rules where they appear

adicion              : 43
asignacion           : 24
contenido            : 1
dec                  : 5 6 8
decla                : 19 21
declaracion          : 20 21 30 31 31 32
declaracion_estructurada : 23
declaracion_if       : 28
declaracion_simple   : 22
declaracion_variable : 4 6
declaracion_variables : 2
declaracion_while    : 29
declaraciones        : 2
declaraciones_compuesta : 18 27
escritura            : 26
exp                  : 36 37 39
exprecion            : 30 31 32 33 38 39 41 53
exprecion_simple     : 40 41 43
factor               : 47 48 54
lectura              : 25
multipicacion        : 48
operador_relacional  : 41
program              : 0
rango                : 11
signo                : 42 43
termino              : 42 43 48
type                 : 5 6
type_array           : 10
type_simple          : 9 11
vacio                : 3 44

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PCOMA USES ID PCOMA contenido

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PCOMA USES ID PCOMA contenido

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PCOMA USES ID PCOMA contenido

    PCOMA           shift and go to state 4


state 4

    (1) program -> PROGRAM ID PCOMA . USES ID PCOMA contenido

    USES            shift and go to state 5


state 5

    (1) program -> PROGRAM ID PCOMA USES . ID PCOMA contenido

    ID              shift and go to state 6


state 6

    (1) program -> PROGRAM ID PCOMA USES ID . PCOMA contenido

    PCOMA           shift and go to state 7


state 7

    (1) program -> PROGRAM ID PCOMA USES ID PCOMA . contenido
    (2) contenido -> . declaracion_variables declaraciones
    (3) declaracion_variables -> . vacio
    (4) declaracion_variables -> . declaracion_variable
    (66) vacio -> .
    (5) declaracion_variable -> . VAR dec DPUN type PCOMA
    (6) declaracion_variable -> . VAR dec DPUN type PCOMA declaracion_variable

    BEGIN           reduce using rule 66 (vacio -> .)
    VAR             shift and go to state 12

    declaracion_variable           shift and go to state 8
    contenido                      shift and go to state 9
    vacio                          shift and go to state 10
    declaracion_variables          shift and go to state 11

state 8

    (4) declaracion_variables -> declaracion_variable .

    BEGIN           reduce using rule 4 (declaracion_variables -> declaracion_variable .)


state 9

    (1) program -> PROGRAM ID PCOMA USES ID PCOMA contenido .

    $end            reduce using rule 1 (program -> PROGRAM ID PCOMA USES ID PCOMA contenido .)


state 10

    (3) declaracion_variables -> vacio .

    BEGIN           reduce using rule 3 (declaracion_variables -> vacio .)


state 11

    (2) contenido -> declaracion_variables . declaraciones
    (18) declaraciones -> . declaraciones_compuesta
    (19) declaraciones_compuesta -> . BEGIN decla END

    BEGIN           shift and go to state 14

    declaraciones                  shift and go to state 15
    declaraciones_compuesta        shift and go to state 13

state 12

    (5) declaracion_variable -> VAR . dec DPUN type PCOMA
    (6) declaracion_variable -> VAR . dec DPUN type PCOMA declaracion_variable
    (7) dec -> . ID
    (8) dec -> . ID COMA dec

    ID              shift and go to state 17

    dec                            shift and go to state 16

state 13

    (18) declaraciones -> declaraciones_compuesta .

    $end            reduce using rule 18 (declaraciones -> declaraciones_compuesta .)


state 14

    (19) declaraciones_compuesta -> BEGIN . decla END
    (20) decla -> . declaracion
    (21) decla -> . decla declaracion
    (22) declaracion -> . declaracion_simple
    (23) declaracion -> . declaracion_estructurada
    (24) declaracion_simple -> . asignacion
    (25) declaracion_simple -> . lectura
    (26) declaracion_simple -> . escritura
    (27) declaracion_estructurada -> . declaraciones_compuesta
    (28) declaracion_estructurada -> . declaracion_if
    (29) declaracion_estructurada -> . declaracion_while
    (33) asignacion -> . ID ASIG exprecion PCOMA
    (34) lectura -> . READ PARI ID PARD PCOMA
    (35) lectura -> . READLN PARI ID PARD PCOMA
    (36) escritura -> . WRITE PARI exp PARD PCOMA
    (37) escritura -> . WRITELN PARI exp PARD PCOMA
    (19) declaraciones_compuesta -> . BEGIN decla END
    (30) declaracion_if -> . IF exprecion THEN declaracion
    (31) declaracion_if -> . IF exprecion THEN declaracion ELSE declaracion
    (32) declaracion_while -> . WHILE exprecion DO declaracion

    ID              shift and go to state 26
    READ            shift and go to state 18
    READLN          shift and go to state 32
    WRITE           shift and go to state 23
    WRITELN         shift and go to state 29
    BEGIN           shift and go to state 14
    IF              shift and go to state 27
    WHILE           shift and go to state 19

    declaraciones_compuesta        shift and go to state 28
    declaracion_while              shift and go to state 20
    asignacion                     shift and go to state 30
    decla                          shift and go to state 31
    lectura                        shift and go to state 22
    declaracion_if                 shift and go to state 24
    declaracion_simple             shift and go to state 25
    declaracion_estructurada       shift and go to state 21
    declaracion                    shift and go to state 33
    escritura                      shift and go to state 34

state 15

    (2) contenido -> declaracion_variables declaraciones .

    $end            reduce using rule 2 (contenido -> declaracion_variables declaraciones .)


state 16

    (5) declaracion_variable -> VAR dec . DPUN type PCOMA
    (6) declaracion_variable -> VAR dec . DPUN type PCOMA declaracion_variable

    DPUN            shift and go to state 35


state 17

    (7) dec -> ID .
    (8) dec -> ID . COMA dec

    DPUN            reduce using rule 7 (dec -> ID .)
    COMA            shift and go to state 36


state 18

    (34) lectura -> READ . PARI ID PARD PCOMA

    PARI            shift and go to state 37


state 19

    (32) declaracion_while -> WHILE . exprecion DO declaracion
    (40) exprecion -> . exprecion_simple
    (41) exprecion -> . exprecion_simple operador_relacional exprecion
    (42) exprecion_simple -> . signo termino
    (43) exprecion_simple -> . signo termino adicion exprecion_simple
    (44) signo -> . vacio
    (45) signo -> . MAS
    (46) signo -> . MENOS
    (66) vacio -> .

    MAS             shift and go to state 38
    MENOS           shift and go to state 43
    CNUM            reduce using rule 66 (vacio -> .)
    STRING          reduce using rule 66 (vacio -> .)
    ID              reduce using rule 66 (vacio -> .)
    NUM             reduce using rule 66 (vacio -> .)
    PARI            reduce using rule 66 (vacio -> .)
    NOT             reduce using rule 66 (vacio -> .)

    exprecion_simple               shift and go to state 39
    signo                          shift and go to state 40
    vacio                          shift and go to state 41
    exprecion                      shift and go to state 42

state 20

    (29) declaracion_estructurada -> declaracion_while .

    END             reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    ID              reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    READ            reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    READLN          reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    WRITE           reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    WRITELN         reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    BEGIN           reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    IF              reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    WHILE           reduce using rule 29 (declaracion_estructurada -> declaracion_while .)
    ELSE            reduce using rule 29 (declaracion_estructurada -> declaracion_while .)


state 21

    (23) declaracion -> declaracion_estructurada .

    END             reduce using rule 23 (declaracion -> declaracion_estructurada .)
    ID              reduce using rule 23 (declaracion -> declaracion_estructurada .)
    READ            reduce using rule 23 (declaracion -> declaracion_estructurada .)
    READLN          reduce using rule 23 (declaracion -> declaracion_estructurada .)
    WRITE           reduce using rule 23 (declaracion -> declaracion_estructurada .)
    WRITELN         reduce using rule 23 (declaracion -> declaracion_estructurada .)
    BEGIN           reduce using rule 23 (declaracion -> declaracion_estructurada .)
    IF              reduce using rule 23 (declaracion -> declaracion_estructurada .)
    WHILE           reduce using rule 23 (declaracion -> declaracion_estructurada .)
    ELSE            reduce using rule 23 (declaracion -> declaracion_estructurada .)


state 22

    (25) declaracion_simple -> lectura .

    END             reduce using rule 25 (declaracion_simple -> lectura .)
    ID              reduce using rule 25 (declaracion_simple -> lectura .)
    READ            reduce using rule 25 (declaracion_simple -> lectura .)
    READLN          reduce using rule 25 (declaracion_simple -> lectura .)
    WRITE           reduce using rule 25 (declaracion_simple -> lectura .)
    WRITELN         reduce using rule 25 (declaracion_simple -> lectura .)
    BEGIN           reduce using rule 25 (declaracion_simple -> lectura .)
    IF              reduce using rule 25 (declaracion_simple -> lectura .)
    WHILE           reduce using rule 25 (declaracion_simple -> lectura .)
    ELSE            reduce using rule 25 (declaracion_simple -> lectura .)


state 23

    (36) escritura -> WRITE . PARI exp PARD PCOMA

    PARI            shift and go to state 44


state 24

    (28) declaracion_estructurada -> declaracion_if .

    END             reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    ID              reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    READ            reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    READLN          reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    WRITE           reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    WRITELN         reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    BEGIN           reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    IF              reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    WHILE           reduce using rule 28 (declaracion_estructurada -> declaracion_if .)
    ELSE            reduce using rule 28 (declaracion_estructurada -> declaracion_if .)


state 25

    (22) declaracion -> declaracion_simple .

    END             reduce using rule 22 (declaracion -> declaracion_simple .)
    ID              reduce using rule 22 (declaracion -> declaracion_simple .)
    READ            reduce using rule 22 (declaracion -> declaracion_simple .)
    READLN          reduce using rule 22 (declaracion -> declaracion_simple .)
    WRITE           reduce using rule 22 (declaracion -> declaracion_simple .)
    WRITELN         reduce using rule 22 (declaracion -> declaracion_simple .)
    BEGIN           reduce using rule 22 (declaracion -> declaracion_simple .)
    IF              reduce using rule 22 (declaracion -> declaracion_simple .)
    WHILE           reduce using rule 22 (declaracion -> declaracion_simple .)
    ELSE            reduce using rule 22 (declaracion -> declaracion_simple .)


state 26

    (33) asignacion -> ID . ASIG exprecion PCOMA

    ASIG            shift and go to state 45


state 27

    (30) declaracion_if -> IF . exprecion THEN declaracion
    (31) declaracion_if -> IF . exprecion THEN declaracion ELSE declaracion
    (40) exprecion -> . exprecion_simple
    (41) exprecion -> . exprecion_simple operador_relacional exprecion
    (42) exprecion_simple -> . signo termino
    (43) exprecion_simple -> . signo termino adicion exprecion_simple
    (44) signo -> . vacio
    (45) signo -> . MAS
    (46) signo -> . MENOS
    (66) vacio -> .

    MAS             shift and go to state 38
    MENOS           shift and go to state 43
    CNUM            reduce using rule 66 (vacio -> .)
    STRING          reduce using rule 66 (vacio -> .)
    ID              reduce using rule 66 (vacio -> .)
    NUM             reduce using rule 66 (vacio -> .)
    PARI            reduce using rule 66 (vacio -> .)
    NOT             reduce using rule 66 (vacio -> .)

    exprecion_simple               shift and go to state 39
    signo                          shift and go to state 40
    vacio                          shift and go to state 41
    exprecion                      shift and go to state 46

state 28

    (27) declaracion_estructurada -> declaraciones_compuesta .

    END             reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    ID              reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    READ            reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    READLN          reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    WRITE           reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    WRITELN         reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    BEGIN           reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    IF              reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    WHILE           reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)
    ELSE            reduce using rule 27 (declaracion_estructurada -> declaraciones_compuesta .)


state 29

    (37) escritura -> WRITELN . PARI exp PARD PCOMA

    PARI            shift and go to state 47


state 30

    (24) declaracion_simple -> asignacion .

    END             reduce using rule 24 (declaracion_simple -> asignacion .)
    ID              reduce using rule 24 (declaracion_simple -> asignacion .)
    READ            reduce using rule 24 (declaracion_simple -> asignacion .)
    READLN          reduce using rule 24 (declaracion_simple -> asignacion .)
    WRITE           reduce using rule 24 (declaracion_simple -> asignacion .)
    WRITELN         reduce using rule 24 (declaracion_simple -> asignacion .)
    BEGIN           reduce using rule 24 (declaracion_simple -> asignacion .)
    IF              reduce using rule 24 (declaracion_simple -> asignacion .)
    WHILE           reduce using rule 24 (declaracion_simple -> asignacion .)
    ELSE            reduce using rule 24 (declaracion_simple -> asignacion .)


state 31

    (19) declaraciones_compuesta -> BEGIN decla . END
    (21) decla -> decla . declaracion
    (22) declaracion -> . declaracion_simple
    (23) declaracion -> . declaracion_estructurada
    (24) declaracion_simple -> . asignacion
    (25) declaracion_simple -> . lectura
    (26) declaracion_simple -> . escritura
    (27) declaracion_estructurada -> . declaraciones_compuesta
    (28) declaracion_estructurada -> . declaracion_if
    (29) declaracion_estructurada -> . declaracion_while
    (33) asignacion -> . ID ASIG exprecion PCOMA
    (34) lectura -> . READ PARI ID PARD PCOMA
    (35) lectura -> . READLN PARI ID PARD PCOMA
    (36) escritura -> . WRITE PARI exp PARD PCOMA
    (37) escritura -> . WRITELN PARI exp PARD PCOMA
    (19) declaraciones_compuesta -> . BEGIN decla END
    (30) declaracion_if -> . IF exprecion THEN declaracion
    (31) declaracion_if -> . IF exprecion THEN declaracion ELSE declaracion
    (32) declaracion_while -> . WHILE exprecion DO declaracion

    END             shift and go to state 48
    ID              shift and go to state 26
    READ            shift and go to state 18
    READLN          shift and go to state 32
    WRITE           shift and go to state 23
    WRITELN         shift and go to state 29
    BEGIN           shift and go to state 14
    IF              shift and go to state 27
    WHILE           shift and go to state 19

    declaraciones_compuesta        shift and go to state 28
    declaracion_while              shift and go to state 20
    asignacion                     shift and go to state 30
    lectura                        shift and go to state 22
    declaracion_if                 shift and go to state 24
    declaracion_simple             shift and go to state 25
    declaracion_estructurada       shift and go to state 21
    declaracion                    shift and go to state 49
    escritura                      shift and go to state 34

state 32

    (35) lectura -> READLN . PARI ID PARD PCOMA

    PARI            shift and go to state 50


state 33

    (20) decla -> declaracion .

    END             reduce using rule 20 (decla -> declaracion .)
    ID              reduce using rule 20 (decla -> declaracion .)
    READ            reduce using rule 20 (decla -> declaracion .)
    READLN          reduce using rule 20 (decla -> declaracion .)
    WRITE           reduce using rule 20 (decla -> declaracion .)
    WRITELN         reduce using rule 20 (decla -> declaracion .)
    BEGIN           reduce using rule 20 (decla -> declaracion .)
    IF              reduce using rule 20 (decla -> declaracion .)
    WHILE           reduce using rule 20 (decla -> declaracion .)


state 34

    (26) declaracion_simple -> escritura .

    END             reduce using rule 26 (declaracion_simple -> escritura .)
    ID              reduce using rule 26 (declaracion_simple -> escritura .)
    READ            reduce using rule 26 (declaracion_simple -> escritura .)
    READLN          reduce using rule 26 (declaracion_simple -> escritura .)
    WRITE           reduce using rule 26 (declaracion_simple -> escritura .)
    WRITELN         reduce using rule 26 (declaracion_simple -> escritura .)
    BEGIN           reduce using rule 26 (declaracion_simple -> escritura .)
    IF              reduce using rule 26 (declaracion_simple -> escritura .)
    WHILE           reduce using rule 26 (declaracion_simple -> escritura .)
    ELSE            reduce using rule 26 (declaracion_simple -> escritura .)


state 35

    (5) declaracion_variable -> VAR dec DPUN . type PCOMA
    (6) declaracion_variable -> VAR dec DPUN . type PCOMA declaracion_variable
    (9) type -> . type_simple
    (10) type -> . type_array
    (13) type_simple -> . INT
    (14) type_simple -> . STR
    (15) type_simple -> . BOOL
    (16) type_simple -> . FLOAT
    (17) type_simple -> . CHAR
    (11) type_array -> . ARRAY CORI rango CORD OF type_simple

    INT             shift and go to state 51
    STR             shift and go to state 56
    BOOL            shift and go to state 55
    FLOAT           shift and go to state 52
    CHAR            shift and go to state 53
    ARRAY           shift and go to state 57

    type_array                     shift and go to state 54
    type                           shift and go to state 58
    type_simple                    shift and go to state 59

state 36

    (8) dec -> ID COMA . dec
    (7) dec -> . ID
    (8) dec -> . ID COMA dec

    ID              shift and go to state 17

    dec                            shift and go to state 60

state 37

    (34) lectura -> READ PARI . ID PARD PCOMA

    ID              shift and go to state 61


state 38

    (45) signo -> MAS .

    CNUM            reduce using rule 45 (signo -> MAS .)
    STRING          reduce using rule 45 (signo -> MAS .)
    ID              reduce using rule 45 (signo -> MAS .)
    NUM             reduce using rule 45 (signo -> MAS .)
    PARI            reduce using rule 45 (signo -> MAS .)
    NOT             reduce using rule 45 (signo -> MAS .)


state 39

    (40) exprecion -> exprecion_simple .
    (41) exprecion -> exprecion_simple . operador_relacional exprecion
    (61) operador_relacional -> . EQ
    (62) operador_relacional -> . LT
    (63) operador_relacional -> . GT
    (64) operador_relacional -> . GE
    (65) operador_relacional -> . LE

    DO              reduce using rule 40 (exprecion -> exprecion_simple .)
    THEN            reduce using rule 40 (exprecion -> exprecion_simple .)
    COMA            reduce using rule 40 (exprecion -> exprecion_simple .)
    PARD            reduce using rule 40 (exprecion -> exprecion_simple .)
    PCOMA           reduce using rule 40 (exprecion -> exprecion_simple .)
    EQ              shift and go to state 67
    LT              shift and go to state 65
    GT              shift and go to state 62
    GE              shift and go to state 63
    LE              shift and go to state 66

    operador_relacional            shift and go to state 64

state 40

    (42) exprecion_simple -> signo . termino
    (43) exprecion_simple -> signo . termino adicion exprecion_simple
    (47) termino -> . factor
    (48) termino -> . factor multipicacion termino
    (49) factor -> . CNUM
    (50) factor -> . STRING
    (51) factor -> . ID
    (52) factor -> . NUM
    (53) factor -> . PARI exprecion PARD
    (54) factor -> . NOT factor

    CNUM            shift and go to state 69
    STRING          shift and go to state 68
    ID              shift and go to state 75
    NUM             shift and go to state 71
    PARI            shift and go to state 70
    NOT             shift and go to state 74

    termino                        shift and go to state 72
    factor                         shift and go to state 73

state 41

    (44) signo -> vacio .

    CNUM            reduce using rule 44 (signo -> vacio .)
    STRING          reduce using rule 44 (signo -> vacio .)
    ID              reduce using rule 44 (signo -> vacio .)
    NUM             reduce using rule 44 (signo -> vacio .)
    PARI            reduce using rule 44 (signo -> vacio .)
    NOT             reduce using rule 44 (signo -> vacio .)


state 42

    (32) declaracion_while -> WHILE exprecion . DO declaracion

    DO              shift and go to state 76


state 43

    (46) signo -> MENOS .

    CNUM            reduce using rule 46 (signo -> MENOS .)
    STRING          reduce using rule 46 (signo -> MENOS .)
    ID              reduce using rule 46 (signo -> MENOS .)
    NUM             reduce using rule 46 (signo -> MENOS .)
    PARI            reduce using rule 46 (signo -> MENOS .)
    NOT             reduce using rule 46 (signo -> MENOS .)


state 44

    (36) escritura -> WRITE PARI . exp PARD PCOMA
    (38) exp -> . exprecion
    (39) exp -> . exprecion COMA exp
    (40) exprecion -> . exprecion_simple
    (41) exprecion -> . exprecion_simple operador_relacional exprecion
    (42) exprecion_simple -> . signo termino
    (43) exprecion_simple -> . signo termino adicion exprecion_simple
    (44) signo -> . vacio
    (45) signo -> . MAS
    (46) signo -> . MENOS
    (66) vacio -> .

    MAS             shift and go to state 38
    MENOS           shift and go to state 43
    CNUM            reduce using rule 66 (vacio -> .)
    STRING          reduce using rule 66 (vacio -> .)
    ID              reduce using rule 66 (vacio -> .)
    NUM             reduce using rule 66 (vacio -> .)
    PARI            reduce using rule 66 (vacio -> .)
    NOT             reduce using rule 66 (vacio -> .)

    exprecion_simple               shift and go to state 39
    signo                          shift and go to state 40
    vacio                          shift and go to state 41
    exprecion                      shift and go to state 77
    exp                            shift and go to state 78

state 45

    (33) asignacion -> ID ASIG . exprecion PCOMA
    (40) exprecion -> . exprecion_simple
    (41) exprecion -> . exprecion_simple operador_relacional exprecion
    (42) exprecion_simple -> . signo termino
    (43) exprecion_simple -> . signo termino adicion exprecion_simple
    (44) signo -> . vacio
    (45) signo -> . MAS
    (46) signo -> . MENOS
    (66) vacio -> .

    MAS             shift and go to state 38
    MENOS           shift and go to state 43
    CNUM            reduce using rule 66 (vacio -> .)
    STRING          reduce using rule 66 (vacio -> .)
    ID              reduce using rule 66 (vacio -> .)
    NUM             reduce using rule 66 (vacio -> .)
    PARI            reduce using rule 66 (vacio -> .)
    NOT             reduce using rule 66 (vacio -> .)

    exprecion_simple               shift and go to state 39
    signo                          shift and go to state 40
    vacio                          shift and go to state 41
    exprecion                      shift and go to state 79

state 46

    (30) declaracion_if -> IF exprecion . THEN declaracion
    (31) declaracion_if -> IF exprecion . THEN declaracion ELSE declaracion

    THEN            shift and go to state 80


state 47

    (37) escritura -> WRITELN PARI . exp PARD PCOMA
    (38) exp -> . exprecion
    (39) exp -> . exprecion COMA exp
    (40) exprecion -> . exprecion_simple
    (41) exprecion -> . exprecion_simple operador_relacional exprecion
    (42) exprecion_simple -> . signo termino
    (43) exprecion_simple -> . signo termino adicion exprecion_simple
    (44) signo -> . vacio
    (45) signo -> . MAS
    (46) signo -> . MENOS
    (66) vacio -> .

    MAS             shift and go to state 38
    MENOS           shift and go to state 43
    CNUM            reduce using rule 66 (vacio -> .)
    STRING          reduce using rule 66 (vacio -> .)
    ID              reduce using rule 66 (vacio -> .)
    NUM             reduce using rule 66 (vacio -> .)
    PARI            reduce using rule 66 (vacio -> .)
    NOT             reduce using rule 66 (vacio -> .)

    exprecion_simple               shift and go to state 39
    signo                          shift and go to state 40
    vacio                          shift and go to state 41
    exprecion                      shift and go to state 77
    exp                            shift and go to state 81

state 48

    (19) declaraciones_compuesta -> BEGIN decla END .
